--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dart_verifiable:
+    path: ../
+  http: ^0.12.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
